--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yugo Onishi"
-  avatar           : "profile.jpb"
+  avatar           : "profile.jpg"
   bio              : "PhD student at MIT"
   location         : "Boston, Massachusetts"
   employer         :
