add meta tag for google verification

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,8 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification : LoIg5NyglPCPtb8zZfKfFbF5DxKF7CWrDo-FIDHggMg
+google_site_verification : 607H1f4lI7gC8ej8ze2YJjxawBOKoWl1bry8T9JTUTA
+# <meta name="google-site-verification" content="607H1f4lI7gC8ej8ze2YJjxawBOKoWl1bry8T9JTUTA" />
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
