updated profile image (jpg to png)

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Yugo Onishi"
-  avatar           : "profile-20240104.jpg"
+  avatar           : "profile-20240104.png"
   bio              : "PhD student at MIT"
   location         : "Boston, Massachusetts"
   employer         :
